# mathjax-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: image.rs  svg.rs
mathjax-data/: README.md  generate.sh
src/: error.rs  lib.rs  main.rs
src/renderer/: browser.rs  mod.rs  node-renderer.js  node.rs
