[package]
name = "mathjax"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["mathjax"]
description = "A rust interface to MathJax"

[features]
default = ["auto"]
image = ["dep:resvg", "dep:image"]

auto = ["node", "browser"]
node = ["dep:tempfile", "dep:zip-extract"]
browser = ["dep:headless_chrome", "dep:anyhow"]

[dependencies]
thiserror = "1.0"
node-semver = "2.1.0"

tempfile = { version = "3.5.0", optional = true }
zip-extract = { version = "0.1.2", optional = true }

image = { version = "0.24.6", optional = true }
resvg = { version = "0.33.0", optional = true }

anyhow = { version = "1.0", optional = true }
headless_chrome = { version = "1.0.5", features = ["fetch"], optional = true }

# docs.rs config
# Can build docs with: RUSTDOCFLAGS="--cfg docs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]

[[example]]
name = "svg"
required-features = ["auto"]

[[example]]
name = "image"
required-features = ["auto", "image"]
